# ContinuousIntegration

./: elarchivo.py  pyproject.toml  readme.md  test_defensa.py  tox.ini
.github/workflows/: ci.yml
elpaquete/: elarchivo.py
