[project]
name = "elpaquete"
version = "1.1"
description = "CI/CD sample"
authors = [ {name = "Bruno Sebastian Rivero"}]
requires-python = ">=3.10"
[tool.poetry.dependencies]
pytest = "^8.4.0"
tox = "^4.26.0"
flask = "^3.1.1"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


